Migrate tests to JUnit Jupiter (#418)
* Migrate annotations and imports
* Migrate assertions
* Remove public visibility for test classes and methods
* Some code cleanup
* Ban JUnit4 imports